@@ -731,3 +731,84 @@ merc_avar_elite = {
 		supply_limit_modifier = 0.15
 	}
 }
+
+merc_black_company = {
+	regiments_per_development = 0.015
+	cavalry_weight = 0.2
+    artillery_weight = 0.3
+	cavalry_cap = 4
+	home_province = 131 # Rothenburg
+	sprites = { dlc061_aug_sprite_pack dlc029_aug_sprite_pack westerngfx_sprite_pack }
+	trigger = {
+		OR = {
+			capital_scope = { 
+				OR = {
+					superregion = germanynorth_superregion
+					superregion = germanysouth_superregion
+					superregion = austria_superregion
+					superregion = switzerland_superregion
+					superregion = bohemia_superregion
+					superregion = lowlands_superregion
+					superregion = british_isles_superregion
+					superregion = irish_superregion
+					superregion = french_superregion
+					superregion = burgundian_superregion
+				}
+			}
+			any_owned_province = {
+				OR = {
+					superregion = germanynorth_superregion
+					superregion = germanysouth_superregion
+				}
+			}
+			has_country_modifier = mercenaries_to_the_standard
+			has_country_modifier = glut_of_mercs
+		}
+	}
+    modifier = { }
+}
+
+merc_polish_hussars = {
+	regiments_per_development = 0.01
+	cavalry_weight = 0.4
+    artillery_weight = 0 # no artillery
+	cavalry_cap = 6
+	home_province = 2016 # Sandomierz
+	sprites = { dlc053_pol_sprite_pack dlc029_pol_sprite_pack dlc003_pol_sprite_pack pol_base_sprite_pack westerngfx_sprite_pack }
+	trigger = {
+		capital_scope = {
+			superregion = poland_superregion
+		}
+	}
+    modifier = {
+		cavalry_shock = 1
+	}
+}
+
+merc_genoese_crossbowmen = {
+	regiments_per_development = 0.015
+	cavalry_weight = 0.2
+    artillery_weight = 0.3
+	cavalry_cap = 4
+	home_province = 2560 # Genoa
+	sprites = { dlc020_gen_sprite_pack westerngfx_sprite_pack }
+	trigger = {
+		OR = {
+			capital_scope = { 
+				OR = {
+					superregion = sicily_superregion
+					superregion = italy_superregion
+				}
+			}
+			has_country_modifier = mercenaries_to_the_standard
+			has_country_modifier = glut_of_mercs
+		}
+		custom_trigger_tooltip = {
+			tooltip = no_new_mercs_tt
+			NOT = { has_global_flag = new_european_mercs }
+		}
+	}
+    modifier = {
+		infantry_fire = 1
+	}
+}
