@@ -184,7 +184,7 @@
  american_western_franchise_warfare: "Napoleonic Lithuanian Musket"
  american_western_franchise_warfareDESCR: "Napoleon's alliance with Saxony, which ruled Poland in personal union, brought Napoleonic tactics to Lithuania."
 #Mercenary Companies
- new_mercs_europe_tt: "§YThe Hessian Jaegerkorps will become available for hire§!\n§YThe Scottish Guard will become available for hire§!\n§YThe Seimeni will become available for hire§!\n§YThe Jutlandic Freischar will become available for hire§!\n§YThe Schwarze Garde will no longer be available for hire§!\n§YThe Bande Nere will no longer be available for hire§!\n§YThe Gallowglasses will no longer be available for hire§!\n§YThe Redshanks will no longer be available for hire§!\n§YThe Geharnischte will no longer be available for hire§!"
+ new_mercs_europe_tt: "§YThe Hessian Jaegerkorps will become available for hire§!\n§YThe Scottish Guard will become available for hire§!\n§YThe Seimeni will become available for hire§!\n§YThe Jutlandic Freischar will become available for hire§!\n§YThe Schwarze Garde will no longer be available for hire§!\n§YThe Bande Nere will no longer be available for hire§!\n§YThe Gallowglasses will no longer be available for hire§!\n§YThe Redshanks will no longer be available for hire§!\n§YThe Geharnischte will no longer be available for hire§!\n§YGenoese Crossbowmen will no longer be available for hire§!"
  crusade_start: "The Papacy has called for a Crusade"
  merc_order_of_alcantara: "Order of Alcántara"
  merc_order_of_montesa: "Order of Montesa"
@@ -222,3 +222,6 @@
  merc_austrian_grenzers: "Austrian Grenzers"
  merc_brabanters: "Brabanters"
  merc_avar_elite: "Avar Elite"
+ merc_black_company: "Black Company"
+ merc_polish_hussars: "Polish Husaria"
+ merc_genoese_crossbowmen: "Genoese Crossbowmen"
