@@ -184,7 +184,7 @@
  american_western_franchise_warfare: "Napoleonischer Litauischer Musketenschütze"
  american_western_franchise_warfareDESCR: "Napoleons Bündnis mit Sachsen, das Polen in Personalunion regierte, brachte die napoleonische Taktik nach Litauen."
 #Mercenary Companies
- new_mercs_europe_tt: "§YDas Hessische Jägerkorps kann angeworben werden§!\n§YDie Schottische Garde kann angeworben werden§!\n§YDie Seimeni können angeworben werden§!\n§YDie Jütländische Freischar kann angeworben werden§!\n§YDie Schwarze Garde kann NICHT mehr angeheuert werden§!\n§YDie Bande Nere kann NICHT mehr angeheuert werden§!\n§YDie Gallowglass können NICHT mehr angeheuert werden§!\n§YDie Redshanks können NICHT mehr angeheuert werden§!\n§YDie Geharnischten können NICHT mehr angeheuert werden§!"
+ new_mercs_europe_tt: "§YDas Hessische Jägerkorps kann angeworben werden§!\n§YDie Schottische Garde kann angeworben werden§!\n§YDie Seimeni können angeworben werden§!\n§YDie Jütländische Freischar kann angeworben werden§!\n§YDie Schwarze Garde kann NICHT mehr angeheuert werden§!\n§YDie Bande Nere kann NICHT mehr angeheuert werden§!\n§YDie Gallowglass können NICHT mehr angeheuert werden§!\n§YDie Redshanks können NICHT mehr angeheuert werden§!\n§YDie Geharnischten können NICHT mehr angeheuert werden§!\n§YDie Genuesischen Armbrustschützen können NICHT mehr angeheuert werden§!"
  crusade_start: "Der Papst hat einen Kreuzzug ausgerufen"
  merc_order_of_alcantara: "Orden von Alcántara"
  merc_order_of_montesa: "Orden von Montesa"
@@ -222,3 +222,6 @@
  merc_austrian_grenzers: "Österreichische Grenzer"
  merc_brabanters: "Brabanzonen"
  merc_avar_elite: "Awarische Elite"
+ merc_black_company: "Schwarze Kompanie"
+ merc_polish_hussars: "Polnische Hussaria"
+ merc_genoese_crossbowmen: "Genuesische Armbrustschützen"
