@@ -3,6 +3,7 @@
 # v 2.2.0 #
 
 #Additions
+-Added the following new mercenary companies: Black Company, Polish Husaria, and the Genoese Crossbowmen
 -Added new mission tree for the Papal States with 50 missions
 -Added new mission tree for Pfullendorf with 12 missions (contribution by Leonhard von Keutschach)
 -Added new mission tree for Alsace with with 15 missions (contribution by FrenchKnight)
